--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,15 @@
     <link rel="shortcut icon" href="./resources/favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-    
+    <header class="text-center py-14 px-3">
+        <!-- header title -->
+        <h3 class="font-bold text-3xl mb-4 md:text-5xl">Frequently Asked Questions</h3>
+        <!-- header description -->
+        <span class="text-lg md:text-xl">Browse through the most frequently asked questions</span>
+    </header>
+
 </body>
+
 </html>
