how to order section done commit

--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
 </head>
 
 <body>
-    <header class="text-center py-14 px-3">
+    <header class="text-center pt-14 pb-16 px-4 lg:pb-24 lg:py-14">
         <!-- header title -->
-        <h3 class="font-bold text-3xl mb-4 md:text-5xl">Frequently Asked Questions</h3>
+        <h3 class="font-bold text-4xl text-[#1F212F] mb-4 md:text-5xl">Frequently Asked Questions</h3>
         <!-- header description -->
-        <span class="text-lg md:text-xl">Browse through the most frequently asked questions</span>
+        <span class="text-xl text-[#676973] mt-3 md:text-xl lg:text-base">Browse through the most frequently asked
+            questions</span>
     </header>
+
+    <main class="bg-[#F8F9FC] py-14 px-10 lg:py-14 lg:px-80">
+        <!-- how to order section -->
+        <section class="border-b-1 border-[#e3e4ea] pb-8">
+            <h3 class="text-[#1F212F] text-2xl font-semibold mb-7">How can I track my order?</h3>
+            <span class="text-[#656772]">You can track your order using the following steps:</span>
+            <ol class="text-[#656772] list-decimal mt-7">
+                <li>Go to the Order <a href="" class="text-[#85A7F1]">Tracking page.</a> </li>
+                <li class="my-2">Enter your order number and email address.</li>
+                <li class="mb-6">Click on the Track Order button to view the current status of your shipment.</li>
+            </ol>
+            <span class="text-[#656772]">If you encounter any issues, please visit our <a href="" class="text-[#85A7F1]">Help
+                    Center.</a></span>
+        </section>
+
+    </main>
 
 </body>
 
