--- a/index.html
+++ b/index.html
@@ -28,8 +28,24 @@
                 <li class="my-2">Enter your order number and email address.</li>
                 <li class="mb-6">Click on the Track Order button to view the current status of your shipment.</li>
             </ol>
-            <span class="text-[#656772]">If you encounter any issues, please visit our <a href="" class="text-[#85A7F1]">Help
+            <span class="text-[#656772]">If you encounter any issues, please visit our <a href=""
+                    class="text-[#85A7F1]">Help
                     Center.</a></span>
+        </section>
+        <!-- return policy section -->
+        <section class="py-8">
+            <h3 class="text-[#1F212F] text-2xl font-semibold mb-7">What is your return policy?</h3>
+            <span class="text-[#656772]">We offer a 30-day return policy on most
+                items. Here are some key points:</span>
+            <ol class="text-[#656772] list-disc mt-7">
+                <li><span class="text-[#4D505B] font-semibold">Items must be in original condition:</span> <span>Unworn, unused, and unwashed.</span></li>
+                <li class="my-2"><span class="text-[#4D505B] font-semibold">Include original packaging and tags:</span> <span>All
+                        items should be returned with their.</li>
+                <li class="mb-6"><span class="text-[#4D505B] font-semibold">Proof of purchase:</span> <span>A receipt or proof of
+                    purchase is required.</span></li>
+            </ol>
+            <span class="text-[#656772]">For more detailed information, read our full <a href=""
+                    class="text-[#85A7F1]">Return Policy.</a></span>
         </section>
 
     </main>
